--- a/app/src/main/res/layout/activity_type.xml
+++ b/app/src/main/res/layout/activity_type.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.yuzhiyun.chemistry.view.activity.ExamActivity">
+    android:orientation="vertical"
+    tools:context="com.yuzhiyun.chemistry.view.activity.TypeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -13,12 +14,12 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/primary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            >
             <TextView
                 android:text="章节"
                 android:textColor="@color/white"
@@ -32,7 +33,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_exam" />
+    <include layout="@layout/listview" />
 
 
-</android.support.design.widget.CoordinatorLayout>
+
+</LinearLayout>
