完成主要功能

--- a/app/src/main/res/layout/activity_type.xml
+++ b/app/src/main/res/layout/activity_type.xml
@@ -21,7 +21,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"
             >
             <TextView
-                android:text="章节"
+                android:text="题型"
                 android:textColor="@color/white"
                 android:textSize="25dp"
                 android:gravity="center"
