--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ee3399f4</color>
+    <color name="red">#FF4081</color>
     <color name="primary">#ff03a9f4</color>
     <color name="primaryDark">#ee3399f4</color>
+    <color name="back">#249ff7</color>
     <color name="white">#ffffff</color>
     <color name="text_color">#666666</color>
 </resources>
