--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,11 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/back"
-    tools:context="com.yuzhiyun.chemistry.view.activity.WelcomeActivity">
+    tools:context="com.yuzhiyun.chemistry.view.activity.TestActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -22,14 +20,15 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-    <ImageView
-        android:id="@+id/iv_welcome_logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/welcome_logo"
-        android:layout_gravity="center_vertical|center_horizontal"/>
 
+    <include layout="@layout/content_test" />
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
