--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -54,14 +54,25 @@
         android:layout_gravity="center"
         android:background="@color/primary"
         />
+    <!--<Button-->
+        <!--android:layout_marginTop="50dp"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="测试"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:textSize="@dimen/activity_vertical_margin"-->
+        <!--android:id="@+id/btnTest"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:background="@color/primary"-->
+        <!--/>-->
     <Button
         android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="测试"
+        android:text="管理员"
         android:textColor="#ffffff"
         android:textSize="@dimen/activity_vertical_margin"
-        android:id="@+id/btnTest"
+        android:id="@+id/btnAdmin"
         android:layout_gravity="center"
         android:background="@color/primary"
         />
