--- a/app/src/main/res/layout/activity_copyright.xml
+++ b/app/src/main/res/layout/activity_copyright.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:id="@+id/container_copyright"
     tools:context="com.yuzhiyun.chemistry.view.activity.CopyrightActivity">
 
     <android.support.design.widget.AppBarLayout
