--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="back">#249ff7</color>
     <color name="white">#ffffff</color>
     <color name="text_color">#666666</color>
+    <color name="balck">#000000</color>
 </resources>
