--- a/app/src/main/res/layout/activity_copyright.xml
+++ b/app/src/main/res/layout/activity_copyright.xml
@@ -15,11 +15,18 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:title="关于作者"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            <TextView
+                android:textColor="@color/white"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="关于App开发者"
+                android:textSize="@dimen/activity_vertical_margin"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
