--- a/app/src/main/res/layout/content_copyright.xml
+++ b/app/src/main/res/layout/content_copyright.xml
@@ -4,92 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.yuzhiyun.chemistry.view.activity.CopyrightActivity"
     tools:showIn="@layout/activity_copyright">
+
     <TextView
-        android:textSize="@dimen/CopyrightTextSize"
-        android:text="简介:          俞志云 中南大学软件工程"
-        android:layout_gravity="left"
-        android:gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        ></TextView>
+        android:layout_gravity="left"
+        android:gravity="center_horizontal"
+        android:text="简介:          俞志云 中南大学软件工程"
+        android:textSize="@dimen/CopyrightTextSize"></TextView>
 
     <LinearLayout
-        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:orientation="horizontal">
+
         <TextView
-              android:textSize="@dimen/CopyrightTextSize"
-            android:text="个人网站："
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:gravity="center_horizontal"
 
+            android:text="个人网站："
+            android:textSize="@dimen/CopyrightTextSize"></TextView>
+
+        <TextView
+
+            android:id="@+id/tvUrl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            ></TextView>
-        <TextView
+            android:layout_gravity="left"
+            android:gravity="center_horizontal"
+            android:text="@string/url"
 
             android:textColor="@color/primary"
-            android:id="@+id/tvUrl"
-            android:textSize="@dimen/CopyrightTextSize"
-            android:text="@string/url"
-            android:layout_gravity="left"
-            android:gravity="center_horizontal"
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            ></TextView>
+            android:textSize="@dimen/CopyrightTextSize"></TextView>
     </LinearLayout>
-    <TextView
-        android:layout_marginTop="@dimen/activity_vertical_margin"
 
-        android:textSize="@dimen/CopyrightTextSize"
+    <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:gravity="center_horizontal"
+
         android:text="微  信:        15111356294"
-        android:layout_gravity="left"
-        android:gravity="center_horizontal"
+        android:textSize="@dimen/CopyrightTextSize"></TextView>
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ></TextView>
     <TextView
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
         android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:gravity="left"
 
-        android:textSize="@dimen/CopyrightTextSize"
-        android:text="公众号:       yuzhiyun（或扫描二维码）"
-        android:layout_gravity="left"
-        android:gravity="center_horizontal"
+        android:text="邮  箱:        2723364262@qq.com\n（可任选联系方式提交反馈信息）"
+        android:textSize="@dimen/CopyrightTextSize"></TextView>
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ></TextView>
-    <ImageView
-        android:layout_marginTop="48dp"
-        android:id="@+id/imgQrcode"
-        android:src="@drawable/qrcode_me"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
-<TextView
-    android:layout_marginTop="50dp"
-    android:layout_gravity="center_horizontal"
-    android:gravity="center_horizontal"
-    android:text="Copyright @ yuzhiyun."
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    ></TextView>
     <TextView
-        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:gravity="center_horizontal"
-        android:text="All rights reserved."
+
+        android:text="公众号:       yuzhiyun（或扫描二维码）"
+        android:textSize="@dimen/CopyrightTextSize"></TextView>
+
+    <ImageView
+        android:id="@+id/imgQrcode"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/qrcode_me" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        ></TextView>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:text="Copyright @ yuzhiyun."></TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:text="All rights reserved."></TextView>
 </LinearLayout>
