--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -20,6 +20,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
             <TextView
+                android:id="@+id/tvTitle"
                 android:text="用户列表"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
