显示化学公式

--- a/app/src/main/res/layout/fragment_no_choice_exercise.xml
+++ b/app/src/main/res/layout/fragment_no_choice_exercise.xml
@@ -13,6 +13,7 @@
         android:textColor="@color/text_color"
         android:textSize="30dp" />
     <TextView
+        android:visibility="invisible"
         android:layout_marginTop="50dp"
         android:id="@+id/tvAnswer"
         android:layout_width="match_parent"
