--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -1,77 +1,93 @@
-<ScrollView
-    android:scrollbars="none"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    tools:context=".view.fragment.ExercisesFragment">
+    android:scrollbars="none">
 
-    <TextView
-        android:id="@+id/tvContent"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="题目"
-        android:textColor="@color/text_color"
-        android:textSize="30dp" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/cardView_left_right"
+        android:layout_marginRight="@dimen/cardView_left_right"
 
-    <TextView
-        android:layout_marginTop="50dp"
-        android:id="@+id/tvAnswer1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="A、"
-        android:textColor="@color/text_color"
-        android:textSize="20dp" />
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardCornerRadius="10dp">
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/tvAnswer2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="B、"
-        android:textColor="@color/text_color"
-        android:textSize="20dp" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            tools:context=".view.fragment.ExercisesFragment">
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/tvAnswer3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="C、"
-        android:textColor="@color/text_color"
-        android:textSize="20dp" />
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/tvAnswer4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="D、"
-        android:textColor="@color/text_color"
-        android:textSize="20dp" />
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/tvAnswer5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="E、"
-        android:textColor="@color/text_color"
-        android:textSize="20dp" />
-    <Button
-        android:layout_marginTop="20dp"
-        android:id="@+id/btnShowAnswer"
-        android:text="显示答案"
-        android:textSize="@dimen/activity_horizontal_margin"
-        android:textColor="@color/white"
-        android:background="@color/primary"
-        android:layout_gravity="center_horizontal|bottom"
+        <TextView
+            android:id="@+id/tvContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="题目"
+            android:textColor="@color/text_color"
+            android:textSize="30dp" />
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tvAnswer1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="A、"
+            android:textColor="@color/text_color"
+            android:textSize="20dp" />
 
-</LinearLayout>
-</ScrollView>
+        <TextView
+            android:id="@+id/tvAnswer2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="B、"
+            android:textColor="@color/text_color"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/tvAnswer3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="C、"
+            android:textColor="@color/text_color"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/tvAnswer4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="D、"
+            android:textColor="@color/text_color"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/tvAnswer5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="E、"
+            android:textColor="@color/text_color"
+            android:textSize="20dp" />
+        <Button
+            android:id="@+id/btnShowAnswer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginTop="20dp"
+            android:background="@color/primary"
+            android:text="显示答案"
+
+            android:textColor="@color/white"
+            android:textSize="@dimen/activity_horizontal_margin" />
+        </LinearLayout>>
+    </android.support.v7.widget.CardView>
+
+  </ScrollView>
+
