--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,40 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".view.activity.MainActivity"
 
-    tools:showIn="@layout/activity_main">
-    <TextView
-        android:gravity="center_horizontal"
-        android:id="@+id/tvUser"
-        android:textSize="16dp"
-        android:text="登录者："
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+    >
+
+
 
     <Button
+        android:id="@+id/btnExam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="开始做题"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/activity_vertical_margin"
-        android:id="@+id/btnExam"
         android:layout_gravity="center"
         android:background="@color/primary"
-     />
+        android:text="开始做题"
+        android:textColor="#ffffff"
+        android:textSize="@dimen/activity_vertical_margin" />
+
+    <android.support.v7.widget.CardView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardCornerRadius="10dp">
+
+        <TextView
+            android:textColor="@color/text_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/outline" />
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardCornerRadius="10dp">
 
 
-
-
-
-
+    </android.support.v7.widget.CardView>
 </LinearLayout>
+
+</ScrollView>
