--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="red">#FF4081</color>
     <color name="primary">#ff03a9f4</color>
     <color name="primaryDark">#ee3399f4</color>
+
+    <color name="status_bar_color">@color/primaryDark</color>
+
     <color name="back">#249ff7</color>
     <color name="white">#ffffff</color>
     <color name="text_color">#666666</color>
