--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,16 +72,10 @@
 
 
 
-            <Button
-                android:id="@+id/btnExam"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@color/primary"
-                android:text="开始做题"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/activity_vertical_margin" />
-
+<ScrollView
+    android:scrollbars="none"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
             <android.support.v7.widget.CardView
 
                 android:layout_width="match_parent"
@@ -91,31 +85,30 @@
                 card_view:cardCornerRadius="10dp">
 
                 <TextView
+                    android:textSize="20dp"
                     android:textColor="@color/text_color"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/outline" />
             </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                card_view:cardCornerRadius="10dp">
-
-
-            </android.support.v7.widget.CardView>
+</ScrollView>
         </LinearLayout>
 
-    <!--</ScrollView>-->
+
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom|right">
 
 
-
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabExam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_menu_paste_holo_dark"
+            app:fab_stroke_visible="true"
+            fab:fab_title="做题" />
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabSwitchAccount"
             android:layout_width="wrap_content"
