--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".view.activity.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,9 +22,7 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            >
-
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
             <android.support.v7.widget.Toolbar
@@ -32,8 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/primary"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-            </android.support.v7.widget.Toolbar>
+                app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
+
             <ImageView
                 android:id="@+id/backdrop"
                 android:layout_width="match_parent"
@@ -50,32 +48,32 @@
     <!--<include layout="@layout/content_main" />-->
 
     <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".view.activity.MainActivity"
+
+        >
+
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context=".view.activity.MainActivity"
+            android:scrollbars="none">
 
-            >
-
-
-
-<ScrollView
-    android:scrollbars="none"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
             <android.support.v7.widget.CardView
 
                 android:layout_width="match_parent"
@@ -85,15 +83,14 @@
                 card_view:cardCornerRadius="10dp">
 
                 <TextView
-                    android:textSize="20dp"
-                    android:textColor="@color/text_color"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/outline" />
+                    android:text="@string/outline"
+                    android:textColor="@color/text_color"
+                    android:textSize="20dp" />
             </android.support.v7.widget.CardView>
-</ScrollView>
-        </LinearLayout>
-
+        </ScrollView>
+    </LinearLayout>
 
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
@@ -109,6 +106,7 @@
             android:src="@drawable/ic_menu_paste_holo_dark"
             app:fab_stroke_visible="true"
             fab:fab_title="做题" />
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabSwitchAccount"
             android:layout_width="wrap_content"
