--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:orientation="vertical"
     tools:context=".view.activity.MainActivity">
 
@@ -14,15 +13,15 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.CollapsingToolbarLayout
+        <!--<android.support.design.widget.CollapsingToolbarLayout-->
 
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            <!--android:id="@+id/collapsing_toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--app:contentScrim="?attr/colorPrimary"-->
+            <!--app:expandedTitleMarginEnd="64dp"-->
+            <!--app:expandedTitleMarginStart="48dp"-->
+            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
 
 
             <android.support.v7.widget.Toolbar
@@ -32,15 +31,15 @@
                 android:background="@color/primary"
                 app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
 
-            <ImageView
-                android:id="@+id/backdrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/back"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.6" />
-        </android.support.design.widget.CollapsingToolbarLayout>
+            <!--<ImageView-->
+                <!--android:id="@+id/backdrop"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:scaleType="centerCrop"-->
+                <!--android:src="@drawable/back"-->
+                <!--app:layout_collapseMode="parallax"-->
+                <!--app:layout_collapseParallaxMultiplier="0.6" />-->
+        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
 
 
     </android.support.design.widget.AppBarLayout>
@@ -93,19 +92,25 @@
     </LinearLayout>
 
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right">
+    <!--<com.getbase.floatingactionbutton.FloatingActionsMenu-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|right">-->
 
-
+<LinearLayout
+    android:layout_gravity="bottom|right"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabExam"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_menu_paste_holo_dark"
             app:fab_stroke_visible="true"
-            fab:fab_title="做题" />
+            fab:fab_title="做题"
+            android:layout_gravity="bottom|right"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabSwitchAccount"
@@ -113,27 +118,33 @@
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_dialog_dialer"
             app:fab_stroke_visible="true"
-            fab:fab_title="切换账户" />
+            fab:fab_title="切换账户"
+            android:layout_gravity="right"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabAdmin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_lock_idle_lock"
-            fab:fab_title="管理员" />
+            fab:fab_title="管理员"
+            android:layout_gravity="right"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabAboutme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_dialog_info"
-            fab:fab_title="关于作者" />
+            fab:fab_title="关于作者"
+            android:layout_gravity="right"/>
 
         <android.support.design.widget.FloatingActionButton
+            android:visibility="gone"
             android:id="@+id/fabTestSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_menu_compose"
-            fab:fab_title="测试推送功能" />
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+            fab:fab_title="测试推送功能"
+            android:layout_gravity="right"/>
+</LinearLayout>
+    <!--</com.getbase.floatingactionbutton.FloatingActionsMenu>-->
 </android.support.design.widget.CoordinatorLayout>
