--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -1,48 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.activity.LoginActivity"
     tools:showIn="@layout/activity_login">
 
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/etUserName"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="用户名"
-        android:gravity="center_vertical"/>
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/icon_white" />
 
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/etUserPwd"
-        android:layout_below="@+id/etUserName"
+    <!--<android.support.v7.widget.CardView-->
+    <!--android:id="@+id/cardView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/image"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:layout_marginRight="20dp"-->
+    <!--android:layout_marginTop="32dp"-->
+    <!--android:clickable="true"-->
+    <!--android:foreground="?android:attr/selectableItemBackground"-->
+    <!--card_view:cardCornerRadius="7dp">-->
+
+    <LinearLayout
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:id="@+id/linear"
+        android:layout_marginTop="32dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="密码" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image"
+
+        android:orientation="vertical">
+
+
+
+
+        <android.support.v7.widget.AppCompatEditText
+
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:id="@+id/etUserName"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/edittext"
+            android:gravity="center_vertical"
+            android:hint="用户名"
+            android:text="" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray">
+
+        </LinearLayout>
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/etUserPwd"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/etUserName"
+            android:background="@drawable/edittext"
+            android:hint="密码"
+            android:text="" />
+
+
+
+
+
+    </LinearLayout>
+    <!--</android.support.v7.widget.CardView>-->
+
     <Button
         android:id="@+id/btnLogin"
-        android:layout_below="@+id/etUserPwd"
         android:layout_width="match_parent"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
-        android:background="@color/primary"
+        android:layout_height="40dp"
+        android:layout_below="@+id/linear"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:background="@android:color/white"
         android:text="登录"
-        android:textSize="@dimen/activity_horizontal_margin"
-        android:textColor="@color/white"
-        android:layout_height="40dp" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/activity_horizontal_margin" />
+
     <TextView
-        android:id="@+id/tvRegister"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/btnLogin"
-        android:text="还没有账户，前往注册 》"
+        android:id="@+id/tvSeverMsg"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:textSize="20dp"
-        android:gravity="center"/>
+        android:layout_below="@+id/btnLogin"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:text=""
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="20dp" />
+
+    <TextView
+        android:textColor="@android:color/white"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/tvRegister"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:gravity="right"
+        android:text="前往注册 >"
+        android:textSize="20dp" />
 </RelativeLayout>
