--- a/app/src/main/res/layout/content_login_register.xml
+++ b/app/src/main/res/layout/content_login_register.xml
@@ -17,7 +17,7 @@
     android:id="@+id/image"
     android:layout_width="100dp"
     android:layout_height="100dp"
-    android:background="@drawable/welcome_logo"
+    android:background="@drawable/icon_white"
     android:layout_centerHorizontal="true"
     />
     <Button
