--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             tools:context=".view.fragment.ExercisesFragment">
 
 
@@ -29,13 +30,13 @@
             android:layout_height="wrap_content"
             android:text="题目"
             android:textColor="@color/text_color"
-            android:textSize="30dp" />
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/tvAnswer1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:text="A、"
             android:textColor="@color/text_color"
             android:textSize="20dp" />
@@ -81,12 +82,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
             android:layout_marginTop="20dp"
-            android:background="@color/primary"
+            android:background="@drawable/btn_back_circle"
             android:text="显示答案"
 
             android:textColor="@color/white"
             android:textSize="@dimen/activity_horizontal_margin" />
-        </LinearLayout>>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
   </ScrollView>
