--- a/app/src/main/res/layout/content_exam.xml
+++ b/app/src/main/res/layout/content_exam.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.yuzhiyun.chemistry.view.activity.ExamActivity"
+    tools:context=".controller.activity.ExamActivity"
     tools:showIn="@layout/activity_exam">
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
