--- a/app/src/main/res/layout/activity_chapters.xml
+++ b/app/src/main/res/layout/activity_chapters.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.yuzhiyun.chemistry.view.activity.ChaptersActivity">
+    tools:context=".controller.activity.ChaptersActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
