--- a/app/src/main/res/layout/activity_type.xml
+++ b/app/src/main/res/layout/activity_type.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:orientation="vertical"
-    tools:context="com.yuzhiyun.chemistry.view.activity.TypeActivity">
+    tools:context=".controller.activity.TypeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
