--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:orientation="vertical"
-    tools:context="com.yuzhiyun.chemistry.view.activity.UserListActivity">
+    tools:context=".controller.activity.UserListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
