--- a/app/src/main/res/layout/content_copyright.xml
+++ b/app/src/main/res/layout/content_copyright.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.yuzhiyun.chemistry.view.activity.CopyrightActivity"
+    tools:context=".controller.activity.CopyrightActivity"
     tools:showIn="@layout/activity_copyright">
 
     <TextView
