--- a/app/src/main/res/layout/content_ctivitytest.xml
+++ b/app/src/main/res/layout/content_ctivitytest.xml
@@ -9,11 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".controller.activity.DataActivity"
-    tools:showIn="@layout/activity_data">
-    <lecho.lib.hellocharts.view.ColumnChartView
-        android:id="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </lecho.lib.hellocharts.view.ColumnChartView>
+    tools:context="com.yuzhiyun.chemistry.ctivitytest"
+    tools:showIn="@layout/activity_ctivitytest">
+
 </RelativeLayout>
