--- a/app/src/main/res/layout/content_login_register.xml
+++ b/app/src/main/res/layout/content_login_register.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.yuzhiyun.chemistry.view.activity.LoginRegisterActivity"
+    tools:context=".controller.activity.LoginRegisterActivity"
     tools:showIn="@layout/activity_login_register"
     android:background="@color/back">
 <ImageView
