--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -21,7 +21,7 @@
             android:layout_height="fill_parent"
             android:orientation="vertical"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            tools:context=".view.fragment.ExercisesFragment">
+            tools:context=".controller.fragment.ExercisesFragment">
 
 
         <TextView
