--- a/app/src/main/res/layout/fragment_no_choice_exercise.xml
+++ b/app/src/main/res/layout/fragment_no_choice_exercise.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
-            tools:context=".view.fragment.ExercisesFragment">
+            tools:context=".controller.fragment.ExercisesFragment">
 
             <TextView
                 android:id="@+id/tvQuestion"
