--- a/app/src/main/res/menu/menu_exam.xml
+++ b/app/src/main/res/menu/menu_exam.xml
@@ -1,10 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".controller.activity.MainActivity">
+    tools:context=".controller.activity.ExamActivity"
+    >
     <item
-        android:id="@+id/action_settings"
+        android:title="分享"
+        android:icon="@drawable/share"
+        android:id="@+id/action_share"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
